--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "test:ci": "ng lint && ng test --single-run",
     "e2e": "ng e2e"
   },
   "private": true,
