--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 before_script:
+- npm install -g @angular/cli
+- npm install -g karma
 - npm install
 - npm run build
 
