--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/d3": "^4.12.0",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
