--- a/package.json
+++ b/package.json
@@ -12,27 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.5",
-    "@angular/cdk": "^5.0.0-rc.2",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.2.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^5.2.1",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
+    "@angular/forms": "5.2.1",
+    "@angular/http": "5.2.1",
+    "@angular/material": "^5.2.1",
+    "@angular/platform-browser": "^5.2.1",
+    "@angular/platform-browser-dynamic": "5.2.1",
+    "@angular/platform-server": "^5.2.1",
+    "@angular/router": "5.2.1",
+    "@angular/tsc-wrapped": "^4.4.6",
+    "@ionic-native/core": "4.4.0",
+    "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/status-bar": "4.4.0",
+    "@ionic/pro": "1.0.17",
+    "@ionic/storage": "2.1.3",
     "core-js": "^2.4.1",
     "d3": "^4.12.0",
     "hammerjs": "^2.0.8",
+    "ionic-angular": "3.9.2",
+    "ionicons": "3.0.0",
     "moment": "^2.15.0",
-    "rxjs": "^5.5.2",
+    "promise-polyfill": "7.1.2",
+    "rxjs": "^5.5.10",
+    "sw-toolbox": "3.6.0",
+    "web-animations-js": "2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.0",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler-cli": "5.2.1",
+    "@angularclass/hmr": "1.2.2",
+    "@angularclass/hmr-loader": "3.0.2",
+    "html-loader": "0.5.1",
+    "husky": "0.14.3",
+    "ngtemplate-loader": "2.0.1",
+    "@angular/cli": "^1.5.0",
     "@angular/language-service": "^5.0.0",
     "@types/d3": "^4.12.0",
     "@types/jasmine": "^2.5.54",
@@ -50,6 +67,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^2.6.2"
   }
 }
